Fix EZP-26485: Scrollbar not working on firefox (udw select view)

--- a/Resources/public/css/views/universaldiscovery.css
+++ b/Resources/public/css/views/universaldiscovery.css
@@ -57,15 +57,9 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    flex-direction: column;
+    flex: 1;
+    min-height: 0;
 }
 
 .ez-view-universaldiscoveryview .ez-tabs-list,
